<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eatery</string>
    <string name="action_settings">Settings</string>
    <string name="button_search">Search</string>
    <string name="search_message">Place, City, Cuisine</string>
    <string name="distance">View by distance</string>
    <string name="cuisine">View by cuisine</string>
	<string name="map">Map View</string>
	<string name="rest_photo">Restaurant photo</string>
	<string name="user_photo">User photo</string>
	<string name="restaurant">Restaurant Name</string>
	<string name="location">Location</string>
	<string name="username">Username</string>
	<string name="time">Time</string>
</resources>
