<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <Button android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
        android:text="@string/button_search" />
        
    <EditText android:id="@+id/edit_search_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toEndOf= "@+id/button_search"
        android:hint="@string/search_message" />
    
    <TextView android:id="@+id/distance_link"
       	android:layout_below="@id/button_search"
       	android:layout_alignParentLeft="true"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingRight="10dp"     
	    android:textColor="#003366"
	    android:text="@string/distance" />
    
     <TextView android:id="@+id/cuisine_link"
        android:layout_below="@id/button_search"
        android:layout_toEndOf= "@+id/distance_link"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
	    android:paddingRight="10dp"     
	    android:textColor="#003366"
	    android:text="@string/cuisine" />
    
     <TextView android:id="@+id/map_link"
        android:layout_below="@id/button_search"
        android:layout_toEndOf= "@+id/cuisine_link"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"  
	    android:textColor="#003366"
	    android:text="@string/map" />
     
    <ListView android:id="@+id/home_ListView"
       	android:layout_below="@id/distance_link"
       	android:layout_alignParentLeft="true"
       	android:layout_width="match_parent"
    	android:layout_height="wrap_content"  />
    		
  
  		 
</RelativeLayout>
